codama-macros/tests/codama_attribute/program_directive/unrecognized_attribute.fail.rs
use codama_macros::codama;

#[codama(program(name = "associatedToken", address = "ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL", banana = "yes"))]
pub struct Test;

fn main() {}
